--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "@nrwl/tao": "13.7.2",
     "@nrwl/workspace": "13.7.2",
     "@storybook/addon-essentials": "~6.4.18",
+    "@storybook/addons": "~6.4.18",
     "@storybook/angular": "~6.4.18",
     "@storybook/builder-webpack5": "~6.4.18",
     "@storybook/manager-webpack5": "~6.4.18",
+    "@storybook/theming": "~6.4.18",
     "@types/jest": "27.4.0",
     "@types/node": "16.11.7",
     "@types/three": "0.137.0",
