--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/language-service": "~13.2.2",
     "@nrwl/angular": "13.8.0",
     "@nrwl/cli": "13.8.0",
+    "@nrwl/devkit": "13.8.0",
     "@nrwl/eslint-plugin-nx": "13.8.0",
     "@nrwl/jest": "13.8.0",
     "@nrwl/linter": "13.8.0",
