--- a/libs/core/project.json
+++ b/libs/core/project.json
@@ -55,7 +55,9 @@
           "libs/core/lines/**/*.ts",
           "libs/core/lines/**/*.html",
           "libs/core/sprites/**/*.ts",
-          "libs/core/sprites/**/*.html"
+          "libs/core/sprites/**/*.html",
+          "libs/core/stats/**/*.ts",
+          "libs/core/stats/**/*.html"
         ]
       }
     }
