--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,6 +26,7 @@
       "@angular-three/core/lines": ["libs/core/lines/src/index.ts"],
       "@angular-three/core/materials": ["libs/core/materials/src/index.ts"],
       "@angular-three/core/sprites": ["libs/core/sprites/src/index.ts"],
+      "@angular-three/core/stats": ["libs/core/stats/src/index.ts"],
       "@angular-three/core/textures": ["libs/core/textures/src/index.ts"]
     }
   },
