--- a/libs/core/.eslintrc.json
+++ b/libs/core/.eslintrc.json
@@ -9,7 +9,8 @@
             ],
             "rules": {
                 "@typescript-eslint/no-non-null-assertion": 0,
-                "@typescript-eslint/ban-ts-comment": 0
+                "@typescript-eslint/ban-ts-comment": 0,
+                "@typescript-eslint/no-unused-vars": 0
             }
         },
         {
