--- a/libs/core/project.json
+++ b/libs/core/project.json
@@ -35,8 +35,6 @@
         "lintFilePatterns": [
           "libs/core/**/*.ts",
           "libs/core/**/*.html",
-          "libs/core/meshes/**/*.ts",
-          "libs/core/meshes/**/*.html",
           "libs/core/geometries/**/*.ts",
           "libs/core/geometries/**/*.html",
           "libs/core/materials/**/*.ts",
@@ -56,7 +54,9 @@
           "libs/core/stats/**/*.ts",
           "libs/core/stats/**/*.html",
           "libs/core/textures/**/*.ts",
-          "libs/core/textures/**/*.html"
+          "libs/core/textures/**/*.html",
+          "libs/core/objects/**/*.ts",
+          "libs/core/objects/**/*.html"
         ]
       }
     }
