--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test",
-    "postinstall": "ngcc --properties es2020 browser module main"
+    "postinstall": "ngcc --properties es2020 browser module main",
+    "commit": "git-cz",
+    "contributors:add": "all-contributors add",
+    "release": "dotenv release-it --",
+    "build": "nx run-many --target=build --projects=core,cannon,postprocessing,soba,schematics",
+    "publish": "nx run-many --target=publish --all --parallel"
   },
   "private": true,
   "devDependencies": {
@@ -27,6 +29,8 @@
     "@nrwl/linter": "15.0.5",
     "@nrwl/nx-plugin": "15.0.5",
     "@nrwl/workspace": "15.0.5",
+    "@release-it/bumper": "4.0.0",
+    "@release-it/conventional-changelog": "5.1.1",
     "@swc-node/register": "^1.5.4",
     "@swc/cli": "~0.1.57",
     "@swc/core": "^1.3.11",
@@ -35,6 +39,10 @@
     "@types/three": "0.144.0",
     "@typescript-eslint/eslint-plugin": "~5.42.0",
     "@typescript-eslint/parser": "~5.42.0",
+    "all-contributors-cli": "6.24.0",
+    "commitizen": "4.2.5",
+    "cz-customizable": "7.0.0",
+    "dotenv-cli": "6.0.0",
     "eslint": "~8.26.0",
     "eslint-config-prettier": "8.5.0",
     "jest": "28.1.1",
@@ -48,6 +56,7 @@
     "postcss-preset-env": "~7.8.2",
     "postcss-url": "~10.1.3",
     "prettier": "^2.7.1",
+    "release-it": "15.5.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.4"
@@ -67,5 +76,10 @@
     "three": "0.146.0",
     "tslib": "^2.4.1",
     "zone.js": "~0.11.8"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    }
   }
 }
