--- a/libs/soba/.eslintrc.json
+++ b/libs/soba/.eslintrc.json
@@ -18,7 +18,8 @@
         "@angular-eslint/no-output-native": 0,
         "@typescript-eslint/no-non-null-assertion": 0,
         "@typescript-eslint/ban-types": 0,
-        "@typescript-eslint/no-empty-function": 0
+        "@typescript-eslint/no-empty-function": 0,
+        "@typescript-eslint/ban-ts-comment": 0
       }
     },
     {
