--- a/libs/soba/tsconfig.lib.json
+++ b/libs/soba/tsconfig.lib.json
@@ -13,7 +13,8 @@
     "jest.config.ts",
     "**/*.test.ts",
     "**/*.stories.ts",
-    "**/*.stories.js"
+    "**/*.stories.js",
+    "src/**/*.ts"
   ],
   "include": ["**/*.ts"]
 }
