--- a/old-v7/packages/sandbox/project.json
+++ b/old-v7/packages/sandbox/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "sandbox",
+  "name": "old-sandbox",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "packages/sandbox/src",
