--- a/package.json
+++ b/package.json
@@ -2,14 +2,66 @@
     "name": "angular-three",
     "version": "0.0.0",
     "license": "MIT",
-    "scripts": {},
+    "scripts": {
+        "sandbox": "nx serve sandbox"
+    },
     "private": true,
     "devDependencies": {
+        "@angular-devkit/build-angular": "~15.0.0",
+        "@angular-eslint/eslint-plugin": "~14.0.4",
+        "@angular-eslint/eslint-plugin-template": "~14.0.4",
+        "@angular-eslint/template-parser": "~14.0.4",
+        "@angular/cli": "~15.0.0",
+        "@angular/compiler-cli": "~15.0.0",
+        "@angular/language-service": "~15.0.0",
         "@nrwl/angular": "15.2.1",
         "@nrwl/cli": "15.2.1",
+        "@nrwl/devkit": "15.2.1",
+        "@nrwl/eslint-plugin-nx": "15.2.1",
+        "@nrwl/jest": "15.2.1",
+        "@nrwl/js": "15.2.1",
+        "@nrwl/linter": "15.2.1",
+        "@nrwl/nx-plugin": "15.2.1",
         "@nrwl/workspace": "15.2.1",
+        "@swc-node/register": "^1.4.2",
+        "@swc/cli": "~0.1.55",
+        "@swc/core": "^1.2.173",
+        "@types/jest": "28.1.1",
+        "@types/node": "16.11.7",
+        "@types/three": "0.146.0",
+        "@typescript-eslint/eslint-plugin": "^5.36.1",
+        "@typescript-eslint/parser": "^5.36.1",
+        "eslint": "~8.15.0",
+        "eslint-config-prettier": "8.1.0",
+        "jest": "28.1.1",
+        "jest-environment-jsdom": "28.1.1",
+        "jest-preset-angular": "~12.2.2",
+        "jsonc-eslint-parser": "^2.1.0",
+        "ng-packagr": "~15.0.0",
         "nx": "15.2.1",
+        "postcss": "^8.4.5",
+        "postcss-import": "~14.1.0",
+        "postcss-preset-env": "~7.5.0",
+        "postcss-url": "~10.1.3",
         "prettier": "^2.6.2",
+        "ts-jest": "28.0.5",
+        "ts-node": "10.9.1",
         "typescript": "~4.8.2"
+    },
+    "dependencies": {
+        "@angular/animations": "~15.0.0",
+        "@angular/common": "~15.0.0",
+        "@angular/compiler": "~15.0.0",
+        "@angular/core": "~15.0.0",
+        "@angular/forms": "~15.0.0",
+        "@angular/platform-browser": "~15.0.0",
+        "@angular/platform-browser-dynamic": "~15.0.0",
+        "@angular/router": "~15.0.0",
+        "@ngrx/component-store": "^15.0.0-beta.1",
+        "@swc/helpers": "~0.4.11",
+        "rxjs": "~7.5.0",
+        "three": "0.146.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.11.4"
     }
 }
