--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,13 @@
         "skipLibCheck": true,
         "skipDefaultLibCheck": true,
         "baseUrl": ".",
-        "paths": {}
+        "paths": {
+            "angular-three": ["packages/angular-three/src/index.ts"],
+            "angular-three/attributes": ["packages/angular-three/attributes/src/index.ts"],
+            "angular-three/geometries": ["packages/angular-three/geometries/src/index.ts"],
+            "angular-three/materials": ["packages/angular-three/materials/src/index.ts"],
+            "angular-three/objects": ["packages/angular-three/objects/src/index.ts"]
+        }
     },
     "exclude": ["node_modules", "tmp"]
 }
