--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.0.4",
+    "@angular-devkit/build-angular": "~15.1.0-rc.0",
     "@angular-eslint/eslint-plugin": "~15.1.0",
     "@angular-eslint/eslint-plugin-template": "~15.1.0",
     "@angular-eslint/template-parser": "~15.1.0",
-    "@angular/cli": "~15.0.4",
-    "@angular/compiler-cli": "~15.0.4",
-    "@angular/language-service": "~15.0.4",
+    "@angular/cli": "~15.1.0-rc.0",
+    "@angular/compiler-cli": "~15.1.0",
+    "@angular/language-service": "~15.1.0",
     "@nrwl/angular": "15.4.4",
     "@nrwl/eslint-plugin-nx": "15.4.4",
     "@nrwl/jest": "15.4.4",
@@ -52,14 +52,14 @@
     "webpack": "^5.75.0"
   },
   "dependencies": {
-    "@angular/animations": "~15.0.4",
-    "@angular/common": "~15.0.4",
-    "@angular/compiler": "~15.0.4",
-    "@angular/core": "~15.0.4",
-    "@angular/forms": "~15.0.4",
-    "@angular/platform-browser": "~15.0.4",
-    "@angular/platform-browser-dynamic": "~15.0.4",
-    "@angular/router": "~15.0.4",
+    "@angular/animations": "~15.1.0",
+    "@angular/common": "~15.1.0",
+    "@angular/compiler": "~15.1.0",
+    "@angular/core": "~15.1.0",
+    "@angular/forms": "~15.1.0",
+    "@angular/platform-browser": "~15.1.0",
+    "@angular/platform-browser-dynamic": "~15.1.0",
+    "@angular/router": "~15.1.0",
     "@ngrx/component-store": "^15.1.0",
     "@pmndrs/cannon-worker-api": "^2.3.0",
     "@rx-angular/state": "^1.7.0",
