--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.1.0-rc.0",
+    "@angular-devkit/build-angular": "~15.1.0",
     "@angular-eslint/eslint-plugin": "~15.1.0",
     "@angular-eslint/eslint-plugin-template": "~15.1.0",
     "@angular-eslint/template-parser": "~15.1.0",
-    "@angular/cli": "~15.1.0-rc.0",
+    "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
     "@nrwl/angular": "15.4.5",
@@ -30,25 +30,25 @@
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/three": "^0.148.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "eslint": "~8.31.0",
     "eslint-config-prettier": "8.6.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.3",
-    "ng-packagr": "~15.0.3",
+    "ng-packagr": "~15.1.1",
     "nx": "15.4.5",
-    "postcss": "^8.4.20",
+    "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
     "postcss-preset-env": "~7.8.3",
     "postcss-url": "~10.1.3",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.2",
     "prettier-plugin-organize-imports": "^3.2.1",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2",
+    "typescript": "~4.9.4",
     "webpack": "^5.75.0"
   },
   "dependencies": {
@@ -61,7 +61,7 @@
     "@angular/platform-browser-dynamic": "~15.1.0",
     "@angular/router": "~15.1.0",
     "@ngrx/component-store": "^15.1.0",
-    "@pmndrs/cannon-worker-api": "^2.3.0",
+    "@pmndrs/cannon-worker-api": "^2.3.2",
     "@rx-angular/state": "^1.7.0",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
