--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@storybook/manager-webpack5": "6.5.15",
         "@types/jest": "28.1.1",
         "@types/node": "16.11.7",
+        "@types/stats.js": "^0.17.0",
         "@types/three": "^0.148.0",
         "@typescript-eslint/eslint-plugin": "^5.48.1",
         "@typescript-eslint/parser": "^5.48.1",
@@ -70,6 +71,7 @@
         "nice-color-palettes": "^3.0.0",
         "postprocessing": "^6.29.3",
         "rxjs": "~7.8.0",
+        "stats.js": "^0.17.0",
         "three": "^0.148.0",
         "three-stdlib": "^2.21.5",
         "troika-three-text": "^0.47.1",
